k8s/deploy-native/tutorial/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  tutorial-api
  labels:
    app: tutorial-api
    svc: tutorial-api-service
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: tutorial-api
  template:
    metadata:
      labels:
        app: tutorial-api
    spec:
      containers:
      - image: cch0124/spring-tutorial-api:latest
        name: tutorial-api
        resources:
          requests:
            memory: '256Mi'
            cpu: '500m'
          limits:
            memory: '1024Mi'
            cpu: '1'
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 60 # 執行第一次請求等待 60 秒
          timeoutSeconds: 3 # 超時後等待多少秒
          failureThreshold: 5
          periodSeconds: 20 # 請求周期
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 3
          periodSeconds: 20
        lifecycle:
          preStop: # 容器終止之前發送的事件
            exec:
              command: ["sh", "-c", "sleep 10"]
        ports:
        - containerPort: 8080
          protocol: TCP
          name: spring-api
        volumeMounts:
        - name: config-volume
          mountPath: /workspace/config
          readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: tutorial-properties-cm
      restartPolicy: Always
      imagePullPolicy: Always
