k8s/deploy-native/tutorial/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tutorial-ingress
  labels:
    app: tutorial-api
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: tutorial-nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tutorial-api-service
              port:
                number: 8080
